static/css/rahul.css
/*********************/
/* Main CSS Start */
/*******************/
/* Global Css */
.desktop_none {
    display: none !important;
}

.mobile_none {
    display: block !important;
}

/* Global Css End */
/**********************/
/* Age Css Start */
.age_section{
    background-image: url(../media/age_bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center;
    padding: 220px 0px 671px 0px;
    margin-top: 16px;
}
.age_div{
    display: flex;
    width: 680px;
    flex-direction: column;
    align-items: center;
    margin: auto;
    gap: 80px;
}
.age_title{
    color: var(--Core-Off-White, #FAFAFA);
    text-align: center;
    font-family: "Josephine Cosy Bold";
    font-size: 80px;
    font-style: normal;
    font-weight: 400;
    line-height: 100%; /* 80px */
    letter-spacing: -4px;
    margin: 0px;
}
.age_bottom{
    display: flex;
    width: 500px;
    flex-direction: column;
    align-items: center;
    gap: 32px;
    margin: auto;
}
.age_btn{
    display: flex;
    height: 56px;
    padding: 16px 40px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    align-self: stretch;
    border-radius: 100px;
    background: var(--Core-yellow, #FFCE3C);
    color: var(--Core-Secondary-Purple, #5A3384);
    text-align: center;
    font-family: Poppins;
    font-size: 15px;
    font-style: normal;
    font-weight: 600;
    cursor: pointer;
    line-height: 150%;
}
.age_btn:hover{
  border: 4px solid var(--Core-Secondary-yellow-dark, #E3AA00);
  background: var(--Core-yellow, #FFCE3C);
}
.age_droplabelbar{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    align-self: stretch;
}
.drop_labelbar{
    display: flex;
    align-items: center;
    gap: 8px;
    align-self: stretch;
}
.drop_label{
    color: var(--Core-Off-White, #FAFAFA);
    font-family: Poppins;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: 150%;
    margin: 0px;
}
.custom-dropdown {
    position: relative;
    width: 100%;
  }

  /* Dropdown button */
  .dropdown-btn {
    width: 100%;
    display: flex;
    height: 56px;
    padding: 16px 12px 16px 32px;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
    align-self: stretch;
    border-radius: 100px;
    background: var(--Core-Purple-dark, #251D32);
    border: none;
    position: relative;
    z-index: 2;
    transition: all 0.3s ease;
  }

  /* Custom dropdown icon */
  .dropdown-icon {
    transition: transform 0.3s ease;
  }

  /* Dropdown list */
  .dropdown-list {
    position: absolute;
    top: calc(100% + 10px); /* 10px gap below button */
    left: 0;
    width: 100%;
    border: none;
    border-radius: 16px;
    list-style: none;
    padding: 5px 0;
    margin: 0;
    opacity: 0;
    display: none;
    transform: translateY(-10px);
    z-index: 10; /* ensure it's above other buttons */
    background-color: #251D32;
    transition: all 0.40s ease-in-out;
  }
  .dropdown-list.open {
    display: block;
  }
  /* Show dropdown when open */
  .custom-dropdown.open .dropdown-list {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
  }

  /* Rotate icon when open */
  .custom-dropdown.open .dropdown-icon {
    transform: rotate(180deg);
  }

  /* Hover effect */
  .dropdown-list li:hover {
    background: #FFCE3C;
    color: #251D32;
  }
  .age_droptext{
    color: var(--Core-yellow, #FFCE3C);
    text-align: center;
    font-family: Poppins;
    font-size: 15px;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
  }
  .dropdown-list li{
    color: var(--Core-yellow, #FFCE3C);
    text-align: start;
    font-family: Poppins;
    font-size: 15px;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    margin: 0px;
    padding: 16px 12px 16px 32px;
  }
  /* Highlight selected option */
.dropdown-list li.selected {
    background: #FFCE3C;
    color: #251D32;
    font-weight: 500;
  }
  
/* Age Css End */

/* Story Start */
/* Hide all tabs initially */


/* Progress Bar */
.progress_bar {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  position: relative;
  z-index: 10;
  padding-top: 40px;
}
.step {
  width: 190px;
  text-align: center;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-items: center;
}

.step img {
  transition: transform 0.3s;
  height: 42px;
}

.step:hover img {
  transform: scale(1.1);
}

.line {
  width: 100px;
  height: 2px;
  background: #4b3b6f;
}

.step p {
  color: var(--Core-Off-White, #FAFAFA);
  text-align: center;
  font-family: "Josephine Cosy Bold";
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: -0.6px;
  text-transform: capitalize;
  margin: 0px;
  transition: color 0.3s;
}

.completed-title {
  color: #ffcc00 !important;
}


.active-title {
  color: #fff !important;
}

/* Tabs */
.tab_content {
  display: none;
  padding: 0px;
  text-align: center;
}
.tab_c1{
  width: 500px;
  margin: auto;
  padding: 80px 0px 410px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
  position: relative;
}
.story_textbox , .story_textbox:focus{
  display: flex;
  padding: 12px 40px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  align-self: stretch;
  border-radius: 100px;
  height: 53px;
  border: 1px solid var(--Core-Secondary-Purple, #5A3384);
  background: var(--Core-Purple-dark, #251D32);
  color: var(--Core-Off-White, #FAFAFA);
  font-family: Quicksand;
  font-size: 16px;
  text-align: center;
  font-style: normal;
  font-weight: 600;
  line-height: 180%;
  box-shadow: none;
  transition: all 0.2s ease-in-out;
}
.story_textbox:hover{
  border: 3px solid var(--Core-Secondary-Purple, #5A3384);
}
/* ... */

